--- a/source/index.html
+++ b/source/index.html
@@ -9,3 +9,70 @@
     <script src="script.js"></script>
     <title>C.L.O.C.K</title>
 </head>
+
+<!-- Div and List in the Body are initialized -->
+
+<body>
+    <div id='clock'>
+        <ul class='hours'>
+            <li>
+                <span>
+                    1
+                </span>
+            </li>
+            <li>
+                <span>
+                    2
+                </span>
+            </li>
+            <li>
+                <span>
+                    3
+                </span>
+            </li>
+            <li>
+                <span>
+                    4
+                </span>
+            </li>
+            <li>
+                <span>
+                    5
+                </span>
+            </li>
+            <li>
+                <span>
+                    6
+                </span>
+            </li>
+            <li>
+                <span>
+                    7
+                </span>
+            </li>
+            <li>
+                <span>
+                    8
+                </span>
+            </li>
+            <li>
+                <span>
+                    9
+                </span>
+            </li>
+            <li>
+                <span>
+                    10
+                </span>
+            </li>
+            <li>
+                <span>
+                    11
+                </span>
+            </li>
+            <li>
+                <span>
+                    12
+                </span>
+            </li>
+        </ul>
