Completed Block Levels for html file

--- a/source/index.html
+++ b/source/index.html
@@ -76,3 +76,16 @@
                 </span>
             </li>
         </ul>
+        <div class='hr-wrapper'>
+            <div class='hand hr'></div>
+        </div>
+        <div class='min-wrapper'>
+            <div class='hand min'></div>
+        </div>
+        <div class='sec-wrapper'>
+            <div class='hand sec'></div>
+        </div>
+    </div>
+</body>
+
+</html>
